applications/wallabag/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  labels:
    app: wallabag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallabag
  template:
    metadata:
      labels:
        app: wallabag
    spec:
      containers:
        - name: wallabag
          image: wallabag/wallabag:2.6.13
          ports:
            - name: http
              containerPort: 80
