applications/wallabag/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallabag
spec:
  type: ClusterIP
  selector:
    app: wallabag
  ports:
    - port: 80
      targetPort: http
