applications/wallabag/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Wallabag
    gethomepage.dev/description: Save and classify articles. Read them later. Freely.
    gethomepage.dev/group: Services
    gethomepage.dev/icon: wallabag
    gethomepage.dev/pod-selector: ""
spec:
  ingressClassName: cilium
  rules:
    - host: &host wallabag.services.sbling.net
      http:
        paths:
          - backend:
              service:
                name: wallabag
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
